# topk

./: README.md  analyze_static.py  gui.py  netflix.py  pyproject.toml
datasets/: Netflix TV Shows and Movies Binned.csv  scores_backup1.csv
src/topk/: diversity_metrics.py  online.py  static.py
tests/: test_algorithms.py
